added counter component

--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "loader.js": "^4.0.1"
   },
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "character-counter",
+    "counter",
+    "input-counter"
   ],
   "dependencies": {
     "ember-cli-babel": "^5.1.6"
