--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "character-counter",
-  "version": "0.0.0",
+  "name": "ember-character-counter",
+  "version": "0.0.1",
   "description": "The default blueprint for ember-cli addons.",
   "directories": {
     "doc": "doc",
@@ -11,7 +11,10 @@
     "start": "ember server",
     "test": "ember try:testall"
   },
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nabaz/ember-character-counter"
+  },
   "engines": {
     "node": ">= 0.10.0"
   },
